--- a/index.html
+++ b/index.html
@@ -4,22 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>POSE IT OUT! | IPG MediaBrands</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="app">
-      <h1>Pose It Out! 🐍</h1>
-      <ol>
-        <li>Click generate button to generate a pose.</li>
-        <li>Take a picture with the designated pose with your phone.</li>
-        <li>Upload in your Instagram and tag IPG MediaBrands.</li>
-      </ol>
-      <div id="poseContainer">
-        <span id="placeholderText">Press Generate Pose</span>
-        <img id="poseImage" src="" alt="Your pose will appear here!" />
+    <div class="main-container">
+      <div id="app">
+        <h1>Lights, camera... action! Link up with your MB-fwen!📸🎉</h1>
+        <p>
+          Psst: Don't forget to tag @ipgmediabrandsmalaysia & @mbcsmy on IG, set
+          your profile to public, and use the hashtag #SSSELEBRATEBETTERTOGETHER
+          #BETTERTOGETHER to be in the mix! 💯 Have fun and may the Ong energy be
+          with you! 🧧✨
+        </p>
+        <ol>
+          <li>Click generate button to generate a pose.</li>
+          <li>Take a picture with the designated pose with your phone.</li>
+          <li>Upload in your Instagram and tag IPG MediaBrands.</li>
+        </ol>
+        <div id="poseContainer">
+          <span id="placeholderText">Press Generate Pose</span>
+          <img id="poseImage" src="" alt="Your pose will appear here!" />
+        </div>
+        <button id="generatePose">Generate Pose</button>
       </div>
-      <button id="generatePose">Generate Pose</button>
     </div>
 
     <script src="app.js"></script>
