--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <body>
     <div class="main-container">
       <div id="app">
-        <h1>Lights, camera... action! Link up with your MB-fwen!📸🎉</h1>
+        <h1>Lights, camera... action!<br />Link up with your MB-fwen!📸🎉</h1>
         <p>
           Psst: Don't forget to tag @ipgmediabrandsmalaysia & @mbcsmy on IG, set
           your profile to public, and use the hashtag #SSSELEBRATEBETTERTOGETHER
-          #BETTERTOGETHER to be in the mix! 💯 Have fun and may the Ong energy be
-          with you! 🧧✨
+          #BETTERTOGETHER to be in the mix! 💯 Have fun and may the Ong energy
+          be with you! 🧧✨
         </p>
         <ol>
           <li>Click generate button to generate a pose.</li>
