change copy and styling

--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
     <div class="main-container">
       <div id="app">
         <h1>Lights, camera... action!<br />Link up with your MB-fwen!📸🎉</h1>
-        <p>
-          Psst: Don't forget to tag @ipgmediabrandsmalaysia & @mbcsmy on IG, set
-          your profile to public, and use the hashtag #SSSELEBRATEBETTERTOGETHER
-          #BETTERTOGETHER to be in the mix! 💯 Have fun and may the Ong energy
-          be with you! 🧧✨
-        </p>
         <ol>
-          <li>Click generate button to generate a pose.</li>
-          <li>Take a picture with the designated pose with your phone.</li>
-          <li>Upload in your Instagram and tag IPG MediaBrands.</li>
+          <li>Click the [Generate] button to get your group pose.</li>
+          <li>Gather your squad of 3 people (from different agencies, okay!) and strike the pose! 🤝✨.</li>
+          <li>Click the [Go to IG] button and upload your epic photo.</li>
+          <li>Don't forget to: </li>
+          <ul style="margin-left: 30px;">
+            <li>Tag @ipgmediabrandsmalaysia & @mbcsmy</li>
+            <li>Set your profile to public</li>
+          </ul>
         </ol>
+        <p>Hashtag: #SSSELEBRATEBETTERTOGETHER and #BETTERTOGETHER to join the fun! 💯</p>
+        <p>Have fun, and may the Ong energy be with you! 🧧✨</p>
         <div id="poseContainer">
           <span id="placeholderText">Press Generate Pose</span>
           <img id="poseImage" src="" alt="Your pose will appear here!" />
