update copy and styling for the instruction

--- a/index.html
+++ b/index.html
@@ -12,17 +12,25 @@
       <div id="app">
         <h1>Lights, camera... action!<br />Link up with your MB-fwen!📸🎉</h1>
         <ol>
-          <li>Click the [Generate] button to get your group pose.</li>
-          <li>Gather your squad of 3 people (from different agencies, okay!) and strike the pose! 🤝✨.</li>
-          <li>Click the [Go to IG] button and upload your epic photo.</li>
-          <li>Don't forget to: </li>
-          <ul style="margin-left: 30px;">
-            <li>Tag @ipgmediabrandsmalaysia & @mbcsmy</li>
-            <li>Set your profile to public</li>
-          </ul>
+          <li>Click the <strong>[Generate]</strong> button to get your group pose.</li>
+          <li>Gather your squad of 3 people (from different IPG agencies, okay!) and <strong>strike the pose!</strong> 🤝✨.</li>
+          <li>Take that <strong>pose on your cam</strong> 📸 and save it!</li>
+          <li>Click the [Go to IG] button and <strong>upload your epic photo</strong>.</li>
         </ol>
-        <p>Hashtag: #SSSELEBRATEBETTERTOGETHER and #BETTERTOGETHER to join the fun! 💯</p>
-        <p>Have fun, and may the Ong energy be with you! 🧧✨</p>
+        <div id="instructions">
+          <p>Don't forget to: </p>
+            <ul>
+              <li>Tag @ipgmediabrandsmalaysia & @mbcsmy</li>
+              <li>Set your profile to public</li>
+            </ul>
+          </div>
+        <p class="emoji">✨📸✨📸✨📸✨</p>
+        <div>
+          <p>Hashtag: </p>
+          <span>#SSSELEBRATEBETTERTOGETHER</span><br>
+          <span>#BETTERTOGETHER to join the fun! 💯</span>
+        </div>
+        <p class="thanks">Have fun, and may the Ong energy be with you! 🧧✨</p>
         <div id="poseContainer">
           <span id="placeholderText">Press Generate Pose</span>
           <img id="poseImage" src="" alt="Your pose will appear here!" />
