update strong tag

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li>Click the [Go to IG] button and <strong>upload your epic photo</strong>.</li>
         </ol>
         <div id="instructions">
-          <p>Don't forget to: </p>
+          <p><strong>Don't forget to</strong>: </p>
             <ul>
               <li>Tag @ipgmediabrandsmalaysia & @mbcsmy</li>
               <li>Set your profile to public</li>
